Entries going in, mongo spatial choking at the moment tho

--- a/README
+++ b/README
@@ -17,3 +17,6 @@ http://googlemapsapi.blogspot.co.uk/2006/08/draggable-markers-and.html
 
 Fun posting on custom map functions
 http://artur.ejsmont.org/blog/content/google-maps-api-version-3-even-easier-than-before
+
+Mongo spatial
+http://www.mongodb.org/display/DOCS/Geospatial+Indexing
