--- a/README
+++ b/README
@@ -20,3 +20,6 @@ http://artur.ejsmont.org/blog/content/google-maps-api-version-3-even-easier-than
 
 Mongo spatial
 http://www.mongodb.org/display/DOCS/Geospatial+Indexing
+
+Info about google maps info windows:
+https://developers.google.com/maps/documentation/javascript/overlays#InfoWindows
